@@ -12,9 +12,8 @@ jQuery JavaScript Library v1.3.2
 http://jquery.com/
 Copyright (c) 2009 John Resig
 
-jQuery Right-Click Plugin
-http://abeautifulsite.net/notebook/68
-Copyright (c) 2008 Cory S.N. LaViska
+jQuery js-Hotkeys
+http://code.google.com/p/js-hotkeys/
 
 jPicker
 http://www.digitalmagicpro.com/jPicker/
